--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "freecodecamp-calculator",
+  "name": "calculator-FreeCodeCamp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
