--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculator-FreeCodeCamp",
+  "name": "calculatorFreeCodeCamp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
